--- a/extensions/odoo_theme/layout_templates/homepage.html
+++ b/extensions/odoo_theme/layout_templates/homepage.html
@@ -1,59 +1,59 @@
 <div id="o_content">
     <section class="o_content_fw_banner">
-        <h1 class="text-white">{{ _("Odoo Documentation") }}</h1>
+        <h1 class="text-white">{{ _("Odoo 文档") }}</h1>
     </section>
     <section>
         <div class="row gx-lg-5">
             <div class="col-lg-6">
-                <h2><a href="{{ pathto('applications') }}">{{ _("User Docs") }}</a></h2>
-                <p class="text-dark">{{ _("Discover our guide to help you use and configure the platform, by applications.") }}</p>
-                <h5 class="text-dark pt-3 text-uppercase fw_bold">{{ _("Top Apps") }}</h5>
+                <h2><a href="{{ pathto('applications') }}">{{ _("用户文档") }}</a></h2>
+                <p class="text-dark">{{ _("通过应用程序发现我们的指南，帮助您使用和配置平台。") }}</p>
+                <h5 class="text-dark pt-3 text-uppercase fw_bold">{{ _("热门应用") }}</h5>
                 <ul class="list-unstyled">
                     <li>
                         <a href="{{ pathto('applications/finance/accounting') }}" class="stretched-link">
-                            {{ _("Accounting") }}
+                            {{ _("会计") }}
                         </a>
                     </li>
                     <li>
                         <a href="{{ pathto('applications/inventory_and_mrp/inventory') }}" class="stretched-link">
-                            {{ _("Inventory") }}
+                            {{ _("库存") }}
                         </a>
                     </li>
                     <li>
                         <a href="{{ pathto('applications/inventory_and_mrp/manufacturing') }}" class="stretched-link">
-                            {{ _("Manufacturing") }}
+                            {{ _("制造") }}
                         </a>
                     </li>
                     <li>
                         <a href="{{ pathto('applications/sales/point_of_sale') }}" class="stretched-link">
-                            {{ _("Point of Sale") }}
+                            {{ _("销售点") }}
                         </a>
                     </li>
                 </ul>
             </div>
             <div class="col-lg-6">
-                <h2 class="border-top pt-4 pt-lg-0"><a href="{{ pathto('administration') }}">{{ _("Install and Maintain") }}</a></h2>
-                <p class="text-dark">{{ _("Learn how to install, deploy and upgrade Odoo on premise or on Odoo.sh.") }}</p>
-                <h5 class="text-dark pt-3 text-uppercase fw_bold">{{ _("Top Links") }}</h5>
+                <h2 class="border-top pt-4 pt-lg-0"><a href="{{ pathto('administration') }}">{{ _("安装和维护") }}</a></h2>
+                <p class="text-dark">{{ _("了解如何在本地或Odoo.sh上安装、部署和升级Odoo。") }}</p>
+                <h5 class="text-dark pt-3 text-uppercase fw_bold">{{ _("热门链接") }}</h5>
                 <ul class="list-unstyled">
                     <li>
                         <a href=" {{ pathto('administration/deployment/install') }} " class="stretched-link">
-                            {{ _("Installing Odoo") }}
+                            {{ _("安装Odoo") }}
                         </a>
                     </li>
                     <li>
                         <a href="{{ pathto('administration/maintain/update') }}" class="stretched-link">
-                            {{ _("Bugfix updates") }}
+                            {{ _("Bug修复更新") }}
                         </a>
                     </li>
                     <li>
                         <a href="{{ pathto('administration/upgrade') }}" class="stretched-link">
-                            {{ _("Upgrading Odoo") }}
+                            {{ _("升级Odoo") }}
                         </a>
                     </li>
                     <li>
                         <a href="{{ pathto('administration/odoo_sh/overview/introduction') }}" class="stretched-link">
-                            {{ _("Odoo.sh: The Odoo Cloud Platform") }}
+                            {{ _("Odoo.sh: Odoo云平台") }}
                         </a>
                     </li>
                 </ul>
@@ -61,50 +61,50 @@
         </div>
         <div class="row gx-lg-5">
             <div class="col-lg-6">
-                <h2 class="border-top pt-4"><a href="{{ pathto('developer') }}">{{ _("Developer") }}</a></h2>
-                <p class="text-dark">{{ _("Learn to develop in Odoo with the developer tutorials and framework references.") }}</p>
-                <h5 class="text-dark pt-3 text-uppercase fw_bold">{{ _("Top Links") }}</h5>
+                <h2 class="border-top pt-4"><a href="{{ pathto('developer') }}">{{ _("开发者") }}</a></h2>
+                <p class="text-dark">{{ _("通过开发者教程和框架参考，学习在Odoo中进行开发。") }}</p>
+                <h5 class="text-dark pt-3 text-uppercase fw_bold">{{ _("热门链接") }}</h5>
                 <ul class="list-unstyled">
                     <li>
                         <a href="{{ pathto('developer/tutorials') }}" class="stretched-link">
-                            {{ _("Tutorials") }}
+                            {{ _("教程") }}
                         </a>
                     </li>
                     <li>
                         <a href="{{ pathto('developer/howtos') }}" class="stretched-link">
-                            {{ _("How-to guides") }}
+                            {{ _("操作指南") }}
                         </a>
                     </li>
                     <li>
                         <a href="{{ pathto('developer/reference') }}" class="stretched-link">
-                            {{ _("Reference") }}
+                            {{ _("参考资料") }}
                         </a>
                     </li>
                     <li>
                         <a href="{{ pathto('developer/reference/external_api') }}" class="stretched-link">
-                            {{ _("External API") }}
+                            {{ _("外部API") }}
                         </a>
                     </li>
                 </ul>
             </div>
             <div class="col-lg-6">
-                <h2 class="border-top pt-4"><a href="{{ pathto('contributing') }}">{{ _("Contributing") }}</a></h2>
-                <p class="text-dark">{{ _("You want to contribute to Odoo but don't know where to start? The tutorials and guidelines are there to help you make Odoo even better.") }}</p>
-                <h5 class="text-dark pt-3 text-uppercase fw_bold">{{ _("Top Links") }}</h5>
+                <h2 class="border-top pt-4"><a href="{{ pathto('contributing') }}">{{ _("贡献") }}</a></h2>
+                <p class="text-dark">{{ _("你想为Odoo做出贡献，但不知道从哪里开始？教程和指南可以帮助你让Odoo变得更好。") }}</p>
+                <h5 class="text-dark pt-3 text-uppercase fw_bold">{{ _("热门链接") }}</h5>
                 <ul class="list-unstyled">
                     <li>
                         <a href="{{ pathto('contributing/development/coding_guidelines') }}" class="stretched-link">
-                            {{ _("Coding guidelines") }}
+                            {{ _("编码指南") }}
                         </a>
                     </li>
                     <li>
                         <a href="{{ pathto('contributing/documentation') }}" class="stretched-link">
-                            {{ _("Documentation") }}
+                            {{ _("文档") }}
                         </a>
                     </li>
                     <li>
                         <a href="{{ pathto('contributing/documentation/content_guidelines') }}" class="stretched-link">
-                            {{ _("Content guidelines") }}
+                            {{ _("内容指南") }}
                         </a>
                     </li>
                 </ul>
